
# FIXME - Only supports Linux for now

SUBDIRS = blocks-runtime libkqueue libpwq


##lib_LTLIBRARIES = libdispatch.la
#
##libBlocksRuntime_la_CFLAGS = -stg=c99 -Wall -Wextra -W -pedantic
#
#libBlocksRuntime_la_SOURCES = runtime.c data.c
#
##check_PROGRAMS = blockrt-test
#
##TESTS = blockrt-test
##
#blockrt_test_SOURCES = test/main.c
#
#blockrt_test_CFLAGS = -I. -fblocks
#
#blockrt_test_LDADD = libBlocksRuntime.la

